--- a/app/boards/arm/alu40/alu40_defconfig
+++ b/app/boards/arm/alu40/alu40_defconfig
@@ -41,3 +41,6 @@ CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
 
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
+
+CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=0
+CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=0
